# ohtu-tehtavat

viikko1/nhl-statistics-1/src/: statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: kauppa.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/nhl-reader/src/: index.py  player.py  player_reader.py  player_stats.py
viikko3/web-login-robot/src/services/: user_service.py
viikko3/web-login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko4/: newfile.txt
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: tennis_game.py
