[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = "ohty viikko 2 poetryn harjoittelua"
authors = ["Sonja Madetoja <sonja.madetoja@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
